Remove --add-exports option from build.sbt